public enum Fractal {
    MANDELBROT,JULIA,BURNING_SHIP
}
