import javax.swing.*;

public class SettingPanel extends JPanel {

    public SettingPanel(){
        setLayout(null); //manual layout
        setSize(450,300);



    }

}
