


classDiagram

    JFrame <|-- MenuFrame
    JFrame <|-- Scene

    class MenuFrame{
      -JPanel buttonsPanel
      -JButton playButton
      -JButton settingsButton
      -JButton exitButton
      +MenuFrame()
    }
    class Scene{
      -MenuFrame mainMenu
      +Scene(MenuFrame mainMenu)
      +dispose() void
    }

    Scene <|-- MandelbrotFrame
    class MandelbrotFrame{
      -HeaderPanel headerPanel
      -CanvasPanel canvasPanel
      -ComputingUnit computer

      +MandelbrotFrame(MenuFrame mainMenu)
      +updateCanvas(List<Pixel> pixels) void
    }

    Scene <|-- SettingsFrame
    class SettingsFrame{
        -HeaderPanel headerPanel
        -ParametersPanel ParametersPanel
        -FractalChoicePanel setsPanel
        -ColormapPanel colormapsPanel

        +SettingsFrame(MenuFrame mainMenu)
    }

    JPanel <|-- HeaderPanel
    class HeaderPanel{
        -JFrame parentFrame

        +HeaderPanel(JFrame parentFrame)
    }

    JPanel <|-- CanvasPanel
    class CanvasPanel{
        -int MAX_ITER
        -List<Pixel> pixels

        +setPixels(List pixels) void
        #paintComponent(Graphics g) void
    }

    JPanel <|-- SettingPanel
    class SettingPanel{
        +SettingPanel()
    }

    SettingPanel <|-- ColormapPanel
    SettingPanel <|-- ParametersPanel
    SettingPanel <|-- FractalChoicePanel

    class ColormapPanel{
        -List<Colormap> colormaps

        +ColormapPanel()
    }

    class FractalChoicePanel{
        -Fractal choice
        +FractalChoicePanel()
    }

    class ParametersPanel{
        +ParametersPanel()  
    }

    HeaderPanel<|--SettingsHeaderPanel
    HeaderPanel<|--PlayHeaderPanel

    MandelbrotFrame *-- ComputingUnit
    class ComputingUnit{
        -int MAX_ITERATIONS
        -double ESCAPE_RADIUS
        -Dimension canvasDim
        -double minX
        -double maxX
        -double minY
        -double maxY
        -List< Pixel > pixels
        
        +ComputingUnit()
        +calculateFractal() void
        +PixelFactory(double x,double y, int widthCoord, int heightCoord) 
        - Equation() Complex
        +getPixels() List< Pixel >
        +getMaxIterations() int
    }

    class Complex{
        -double real
        -double imaginary

        +Complex(double r, double i)
        +add(Complex other) Complex
        +subtract(Complex other) Complex
        +multiply(Complex other) Complex
        +square() Complex
        +radius() double

    }

    ComputingUnit *-- Pixel
    CanvasPanel *-- Pixel
    Pixel *-- Complex
    MandelbrotFrame *-- CanvasPanel
    MandelbrotFrame *-- PlayHeaderPanel
    SettingsFrame *-- SettingsHeaderPanel
    class Pixel{
        -Complex cooridnate
        -int outStoodIterations
        -int displayX
        -int displayY

        +Pixel(Complex c,int iter,int displayX,int displayY)
        +getDisplayX() int
        +getDisplayY() int
        +getOutStoodIterations() int 
        +getCoordinate() Complex
    }

    class FileUtils
    class Fractal{
        ENUM
    }

